# paloaltonetworks-automation-examples

./: .flake8  .gitignore  CLAUDE.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
containers/cdss_certificate_remediation/: .gitignore  .pre-commit-config.yaml  CONTRIBUTORS.txt  LICENSE  README.md  docker-compose.docs.yml  docker-compose.local.yml  docker-compose.production.yml  manage.py  pyproject.toml  tasks.py
containers/cdss_certificate_remediation/.devcontainer/: devcontainer.json
containers/cdss_certificate_remediation/.envs/.local/: .django  .postgres
containers/cdss_certificate_remediation/cdss_certificate_remediation/: conftest.py
containers/cdss_certificate_remediation/cdss_certificate_remediation/dashboard/: apps.py
containers/cdss_certificate_remediation/cdss_certificate_remediation/inventory/: api_views.py  apps.py  forms.py  models.py  serializers.py  views.py
containers/cdss_certificate_remediation/cdss_certificate_remediation/inventory/migrations/: 0001_initial.py
containers/cdss_certificate_remediation/cdss_certificate_remediation/static/css/: project.css
containers/cdss_certificate_remediation/cdss_certificate_remediation/static/scss/: _buttons.scss  _content.scss  _navbar.scss  _sidebar.scss  _variables.scss  main.scss
containers/cdss_certificate_remediation/cdss_certificate_remediation/templates/: base.html
containers/cdss_certificate_remediation/cdss_certificate_remediation/templates/account/: login.html  logout.html  signup.html
containers/cdss_certificate_remediation/cdss_certificate_remediation/templates/components/: footer.html  navbar.html  sidebar.html
containers/cdss_certificate_remediation/cdss_certificate_remediation/templates/inventory/: inventory_form.html  inventory_list.html
containers/cdss_certificate_remediation/cdss_certificate_remediation/templates/pages/: home.html
containers/cdss_certificate_remediation/cdss_certificate_remediation/users/: adapters.py  apps.py  views.py
containers/cdss_certificate_remediation/config/: api_router.py  asgi.py  celery_app.py  urls.py  wsgi.py
containers/cdss_certificate_remediation/config/settings/: base.py  local.py  production.py  test.py
containers/cdss_certificate_remediation/django_project/: conftest.py
containers/cdss_certificate_remediation/django_project/dashboard/: apps.py  urls.py  views.py
containers/cdss_certificate_remediation/django_project/health/: apps.py  urls.py
containers/cdss_certificate_remediation/django_project/inventory/: admin.py  api_views.py  apps.py  consumers.py  forms.py  models.py  routing.py  serializers.py  tasks.py  urls.py  utils.py  views.py
containers/cdss_certificate_remediation/django_project/jobs/: __init__.py  admin.py  api_views.py  apps.py  consumers.py  filters.py  forms.py  models.py  routing.py  serializers.py  tasks.py  urls.py  utils.py  views.py
containers/cdss_certificate_remediation/django_project/scripts/: inventory_script.py
containers/cdss_certificate_remediation/django_project/task_results/: __init__.py  admin.py  api_views.py  apps.py  consumers.py  filters.py  models.py  routing.py  serializers.py  urls.py  views.py
containers/cdss_certificate_remediation/django_project/templates/: base.html
containers/cdss_certificate_remediation/django_project/users/: adapters.py  apps.py  models.py  views.py
containers/cdss_certificate_remediation/docs/: conf.py  howto.rst  index.rst  make.bat  users.rst
containers/cdss_certificate_remediation/docs/pycharm/: configuration.rst
containers/cdss_certificate_remediation/requirements/: base.txt  local.txt
containers/execution-environment-netbox/: README.md  execution-environment.yml  pyproject.toml
containers/pan-ansible/: .zshrc  Dockerfile  README.md  pyproject.toml  tasks.py
docs/: index.md
kubernetes/helm-pan-os-telemetry/: README.md  pan-os-telemetry-0.1.0.tgz  pyproject.toml  tasks.py
kubernetes/helm-pan-os-telemetry/containers/: debug-pod.yaml
kubernetes/helm-pan-os-telemetry/containers/grafana/: Dockerfile
kubernetes/helm-pan-os-telemetry/containers/panos_exporter/: Dockerfile  device.yaml  grafana.json
kubernetes/helm-pan-os-telemetry/containers/prometheus/: Dockerfile
kubernetes/helm-pan-os-telemetry/pan-os-telemetry/: Chart.yaml  values.yaml
kubernetes/helm-pan-os-telemetry/pan-os-telemetry/templates/: NOTES.txt  _helpers.tpl  configmap-grafana-dashboard-provisioning.yaml  configmap-grafana-dashboard.yaml  configmap-grafana.yaml  configmap-panos-exporter.yaml  configmap-prometheus.yaml  deployment-grafana.yaml  deployment-panos-exporter.yaml  deployment-prometheus.yaml  hpa.yaml  ingress.yaml  service-grafana.yaml  service-panos-exporter.yaml  service-prometheus.yaml  serviceaccount.yaml
python/general/django-base/: .gitignore  README.md  pyproject.toml
python/get-certificate-chain/: .gitignore  CHANGELOG.md  README.md  pyproject.toml
python/get-certificate-chain/docs/: conf.py  index.rst
python/get-certificate-chain/get_certificate_chain/: download.py
python/get-certificate-chain/get_certificate_chain/tests/: test_cert.py
python/pan-os-configure-address-object/: .env.example  README.md  app.py  models.py  paloconfig.old  paloconfig.py  panos_client.py  pyproject.toml  utils.py
python/pan-os-configure-address-object/config/: address_objects.yaml
python/pan-os-configure-address-object/tests/: test_panos_client.py  test_utils.py
python/pan-os-nat64-counters/: pyproject.toml
python/panorama/configure-logical-interfaces/: .env.example  Makefile  README.md  app.py  pyproject.toml
python/panorama/configure-logical-interfaces/config/: tunnel_interfaces.yaml
python/panos/ai-agent/: .gitignore  .pre-commit-config.yaml  PRD.md  README.md  TODO.md  fix_markdown.py  pyproject.toml
python/panos/ai-agent/docs/: EVALUATION_DATASET.md  TROUBLESHOOTING.md
python/panos/ai-agent/scripts/: evaluate.py  test_anonymization.sh
python/panos/ai-agent/src/: autonomous_graph.py  deterministic_graph.py
python/panos/ai-agent/tests/: conftest.py
python/panos/block-gp-logins/: README.md  app.py  dags.xml  pyproject.toml
(+1079 files in other folders)
