[tool.poetry]
name = "paloaltonetworks-automation-examples"
version = "0.1.0"
description = "Home to all of my personal automation examples for Palo Alto Networks products"
authors = ["Calvin Remsburg <calvin@cdot.io>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ansible = "^9.5.1"
pan-os-python = "^1.12.0"
pydantic = "^2.7.1"
lxml = "^5.2.2"
xmltodict = "^0.13.0"
invoke = "^2.2.0"
requests = "^2.32.2"
dynaconf = "^3.2.5"
pulumi = "^3.116.1"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
black = "^24.4.2"
ipdb = "^0.13.13"
ipython = "^8.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
