[tool.poetry]
name = "get_certificate_chain"
version = "0.1.7"
description = "Project to help use the breadcrumbs that are left by the certificate to build the chain and output it into files."
authors = ["Calvin Remsburg <cremsburg.dev@gmail.com>", " TheScriptGuy <@nolanrumble>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
cryptography = "^40.0.1"
argparse = "^1.4.0"
pytest = "^7.3.1"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pytest = "^7.3.1"
pytest-black = "^0.3.12"
flake8 = "^6.0.0"
ipython = "^8.12.0"
ipdb = "^0.13.13"
requests = "^2.28.2"
sphinx = "^6.1.3"
sphinx-rtd-theme = "^1.2.0"
pytest-mock = "^3.10.0"

[tool.poetry.scripts]
get-certificate-chain = "get_certificate_chain.download:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
