[tool.poetry]
name = "pan-os-configure-panorama"
version = "0.1.0"
description = ""
authors = ["Calvin Remsburg <cremsburg.dev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
dynaconf = "^3.2.4"
lxml = "^4.9.3"
pan-os-python = "^1.12.1"
pyyaml = "^6.0.2"


[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
flake8 = "^6.1.0"
ipdb = "^0.13.13"
ipython = "^8.18.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
