[tool.poetry]
name = "spice-rack"
version = "0.1.0"
description = "Django web application for recipe management"
authors = ["Calvin Remsburg <cremsburg.dev@gmail.com>"]
license = "Apache2.0"
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.5"
psycopg2-binary = "^2.9.5"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
invoke = "^1.7.3"
flake8 = "^6.0.0"
djlint = "^1.19.10"
environs = "^9.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
