[tool.poetry]
name = "dag-updates"
version = "0.1.0"
description = ""
authors = ["Calvin Remsburg <cremsburg.dev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
dynaconf = "^3.2.4"
lxml = "^4.9.3"


[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
flake8 = "^6.1.0"
ipdb = "^0.13.13"
ipython = "^8.18.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
